DeveloperOrg/force-app/main/default/objects/customer_2__c/fields/Last_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Date__c</fullName>
    <label>Last Active Date</label>
    <type>Date</type>
</CustomField>