DeveloperOrg/force-app/main/default/objects/customer_2__c/fields/Subcribe_To_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Subcribe_To_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subcribe To Whatsapp</label>
    <type>Checkbox</type>
</CustomField>