DeveloperOrg/force-app/main/default/objects/customer_2__c/validationRules/alert.validationRule-meta.xml
<ValidationRule>
    <fullName>alert</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 Subcribe_To_Whatsapp__c = True,
  ISBLANK (  Email__c  )
)</errorConditionFormula>
    <errorMessage>alert</errorMessage>
</ValidationRule>